consolidating as many builds as possible